[package]
name = "qpl"
version = "0.0.2"
edition = "2021"
authors = [ "Quigly" ]
description = "Quigly's Platform Layer"
license = "MIT"
repository = "https://github.com/quigly/qpl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.134"
lazy_static = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["everything"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.20.0"