[package]
name = "qpl"
version = "0.2.1"
edition = "2021"
authors = [ "Quigly" ]
description = "Quigly's Platform Layer"
license = "MIT"
repository = "https://github.com/quigly/qpl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.134"
lazy_static = "1.4.0"
gl = "0.14.0"
ash = "0.37.0+1.3.209"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["everything"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.20.0", features = ["xlib", "glx"] }
